--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -100,6 +100,7 @@
         "    %cd stable-diffusion-webui\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user4.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/api.py -O modules/api/api.py\n",
         "   \n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
@@ -204,17 +205,25 @@
         "  if SDZ_ControlNet:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
-        "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
+        "    !git clone https://github.com/crucible-ai/sd-webui-controlnet.git\n",
+        "\n",
         "    %cd sd-webui-controlnet/models\n",
-        "    !wget --timestamping https://huggingface.co/CrucibleAI/ControlNetMediaPipeFace/resolve/main/control_mediapipe_face_sd15_v2.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_hed-fp16.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_mlsd-fp16.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_normal-fp16.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_openpose-fp16.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_scribble-fp16.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_seg-fp16.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/CrucibleAI/ControlNetMediaPipeFace/resolve/main/control_v2p_sd15_mediapipe_face.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11f1p_sd15_depth.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_lineart.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_mlsd.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_normalbae.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_openpose.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_scribble.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_seg.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11e_sd15_ip2p.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11e_sd15_shuffle.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_inpaint.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_softedge.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15s2_lineart_anime.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11u_sd15_tile.pth\n",
+        "    \n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_canny-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_color-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_depth-fp16.safetensors\n",
@@ -223,6 +232,15 @@
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_style-fp16.safetensors\n",
+        "\n",
+        "    !wget --timestamping https://huggingface.co/ckpt/ControlNet/resolve/main/hand_pose_model.pth \n",
+        "    !wget --timestamping https://huggingface.co/ckpt/ControlNet/resolve/main/body_pose_model.pth\n",
+        "    !wget --timestamping https://huggingface.co/ckpt/ControlNet/resolve/main/dpt_hybrid-midas-501f0c75.pt\n",
+        "    !wget --timestamping https://huggingface.co/ckpt/ControlNet/resolve/main/mlsd_large_512_fp32.pth\n",
+        "    !wget --timestamping https://huggingface.co/ckpt/ControlNet/resolve/main/mlsd_tiny_512_fp32.pth\n",
+        "    !wget --timestamping https://huggingface.co/ckpt/ControlNet/resolve/main/network-bsds500.pth\n",
+        "    !wget --timestamping https://huggingface.co/ckpt/ControlNet/resolve/main/upernet_global_small.pth\n",
+        "\n",
         "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
         "    %cd ../../..\n",
         "\n",
