--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -69,11 +69,11 @@
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
-        "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
+        "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = True\n",
         "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --xformers --multiple --theme=dark --gradio-queue --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "\n",
@@ -330,7 +330,8 @@
         "  if SDZ_ControlNet:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
-        "    !git clone https://github.com/crucible-ai/sd-webui-controlnet.git\n",
+        "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
+        "    #!git clone https://github.com/crucible-ai/sd-webui-controlnet.git\n",
         "    #!sed -i 's/max_models = shared.opts.data.get(\"control_net_max_models_num\", 1)/max_models = shared.opts.data.get(\"control_net_max_models_num\", 4)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
         "    #!sed -i 's/1, \"Multi ControlNet/4, \"Multi ControlNet/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
         "    #!sed -i 's/False, \"Allow other script to control this extension/True, \"Allow other script to control this extension/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
