--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -700,11 +700,11 @@
         "%%capture\n",
         "from IPython.display import clear_output\n",
         "import os\n",
-        "save_repository = \"/content/drive/MyDrive/AI/Modelz\" #@param {type:\"string\"}\n",
+        "save_repository = \"/content/\" #@param {type:\"string\"}\n",
         "os.chdir(save_repository)\n",
         "!pip install happytransformer\n",
         "!pip install huggingface_hub\n",
-        "url = \"huggingface.co/uwg/modelz5z\" #@param {type:\"string\"}\n",
+        "url = \"huggingface.co/uwg/modelz_itrain\" #@param {type:\"string\"}\n",
         "user = \"uwg\" #@param {type:\"string\"}\n",
         "token = \"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\" #@param {type:\"string\"}\n",
         "!git lfs install\n",
