--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -489,7 +489,7 @@
         "# @markdown Fill this if you want to upload to your organization, or just leave it empty.\n",
         "orgs_name = \"\"  # @param{type:\"string\"}\n",
         "# @markdown If your model/dataset repo does not exist, it will automatically create it.\n",
-        "model_name = \"model_loraz/blob/main/output_zpaotruzz_150423\"  # @param{type:\"string\"}\n",
+        "model_name = \"model_loraz\"  # @param{type:\"string\"}\n",
         "dataset_name = \"uwg\"  # @param{type:\"string\"}\n",
         "make_private = False  # @param{type:\"boolean\"}\n",
         "\n",
@@ -552,10 +552,10 @@
         "path_in_repo = \"\"  # @param {type :\"string\"}\n",
         "\n",
         "# @markdown Now you can save your config file for future use\n",
-        "config_path = \"/content/LoRA/config\"  # @param {type :\"string\"}\n",
+        "config_path = \"\"  # @param {type :\"string\"}\n",
         "\n",
         "# @markdown Other Information\n",
-        "commit_message = \"\"  # @param {type :\"string\"}\n",
+        "commit_message = \"zzz\"  # @param {type :\"string\"}\n",
         "\n",
         "if not commit_message:\n",
         "    commit_message = f\"feat: upload {project_name} lora model\"\n",
