--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -289,7 +289,7 @@
         "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
         "    #!git clone https://github.com/v8hid/infinite-zoom-automatic1111-webui.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "    #!git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
+        "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
         "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
