--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -92,7 +92,7 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user4.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/multi_frame_render.py -O /scripts/multi_frame_render.py\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
-        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/api.py -O modules/api/api.py\n",
+        "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/api.py -O modules/api/api.py\n",
         "    \n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
