--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -100,7 +100,7 @@
         "    %cd stable-diffusion-webui\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user4.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
-        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/api.py -O modules/api/api.py\n",
+        "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/api.py -O modules/api/api.py\n",
         "   \n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
@@ -169,7 +169,7 @@
         "    %cd extensions\n",
         "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "    #!git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
+        "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
         "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
