--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -321,8 +321,9 @@
         "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg\n",
         "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
         "    !git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
-        "    !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui\n",
+        "    !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui  \n",
         "    !wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
+        "    !git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
