--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -57,7 +57,7 @@
         "import time\n",
         "\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
-        "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
+        "SDZ_install = \"/content\" \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
         "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.Clarity_20\",\"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV20\", \"V1.5.AnalogMadnessV30\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\", \"V1.5.Level4_v50\", \"V1.5.Degenerate_v10\", \"V1.5.LazyMix\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
@@ -67,8 +67,8 @@
         "#SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "#SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
-        "SDZ_Args = \"--api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --opt-sdp-attention --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" # @param {type:\"string\"}\n",
-        "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
+        "SDZ_Args = \"--share --api --xformers --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --opt-sdp-attention --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" # @param {type:\"string\"}\n",
+        "SDZ_Extensions = True\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = True\n",
         "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
@@ -76,7 +76,7 @@
         "SDZ_Continue = True #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
-        "share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
+        "share = SDZ_Args\n",
         "\n",
         "# SDZ_RunSDZ\n",
         "if not SDZ_Continue: \n",
@@ -324,7 +324,7 @@
         "    !git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
         "    !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui  \n",
         "    !wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
-        "    !git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
+        "    #!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
