--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -69,11 +69,11 @@
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "SDZ_Args = \"--share --api --xformers --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --opt-sdp-attention --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" # @param {type:\"string\"}\n",
         "SDZ_Extensions = True\n",
-        "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
+        "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = True\n",
-        "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
+        "SDZ_Upscalers = True #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "share = SDZ_Args\n",
@@ -352,7 +352,7 @@
         "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_inpaint.pth\n",
         "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_softedge.pth\n",
         "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15s2_lineart_anime.pth\n",
-        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11u_sd15_tile.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11f1e_sd15_tile.pth\n",
         "    \n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_canny-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_color-fp16.safetensors\n",
