--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -57,25 +57,26 @@
         "import time\n",
         "\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
-        "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
+        "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
         "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▥</font>\n",
-        "SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
-        "SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
+        "#SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
+        "#SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
+        "SDZ_Args = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --opt-sdp-attention --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" # @param {type:\"string\"}\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
-        "SDZ_Args = \"\" # @param {type:\"string\"}\n",
-        "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
+        "SDZ_Extensions = True\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
+        "\n",
         "SDZ_Big_Models = True\n",
-        "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
+        "SDZ_Upscalers = False\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
+        "share = SDZ_Args\n",
         "\n",
         "def getLink(path):\n",
         "  with open(path, 'r') as testwritefile:\n",
@@ -223,7 +224,7 @@
         "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_inpaint.pth\n",
         "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_softedge.pth\n",
         "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15s2_lineart_anime.pth\n",
-        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11u_sd15_tile.pth\n",
+        "    !wget --timestamping https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11f1e_sd15_tile.pth\n",
         "    \n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_canny-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_color-fp16.safetensors\n",
