--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -66,7 +66,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▥</font>\n",
         "#SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "#SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
-        "SDZ_Args = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --opt-sdp-attention --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" # @param {type:\"string\"}\n",
+        "SDZ_Args = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --opt-sdp-attention --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "SDZ_Extensions = True\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
