--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -460,6 +460,231 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a> </a> <a href=\"https://www.buymeacoffee.com/wilzamguerrero\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/coffe4.gif?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> \n",
+        "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
+        "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
+        "import os\n",
+        "import shutil\n",
+        "from IPython.utils import capture\n",
+        "from IPython.display import clear_output\n",
+        "import sys\n",
+        "import fileinput\n",
+        "import time\n",
+        "\n",
+        "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
+        "SDZ_install = \"/content/\" #@param {type:\"string\"}\n",
+        "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
+        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.Clarity_20\",\"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV20\", \"V1.5.AnalogMadnessV30\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\", \"V1.5.Level4_v50\", \"V1.5.Degenerate_v10\", \"V1.5.LazyMix\"]\n",
+        "SDZ = \"stable-diffusion-webui\"\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "os.chdir(SDZ_install)\n",
+        "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▥</font>\n",
+        "SDZ_Model_Init = \"/content/drive/MyDrive/o_o/AI/Civ/deliberate_v2.safetensors\" #@param {type:\"string\"}\n",
+        "SDZ_Models_Dir = \"/content/drive/MyDrive/o_o/AI/Civ\" #@param {type:\"string\"}\n",
+        "SDZ_Lora_Dir = \"/content/drive/MyDrive/o_o/AI/loratra\" #@param {type:\"string\"}\n",
+        "SDZ_embeddings_Dir = \"\" #@param {type:\"string\"}\n",
+        "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
+        "SDZ_Args = \"--share --api --xformers --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --opt-sdp-attention --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" # @param {type:\"string\"}\n",
+        "SDZ_Extensions = True\n",
+        "SDZ_Big_Models = True\n",
+        "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
+        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
+        "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
+        "share = \" --lora-dir=\" + SDZ_Lora_Dir + \" --embeddings-dir=\" + SDZ_embeddings_Dir +  \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
+        "\n",
+        "# SDZ_RunSDZ\n",
+        "if not SDZ_Continue: \n",
+        "  with capture.capture_output() as cap:\n",
+        "    if os.path.exists(SDZ):\n",
+        "      shutil.rmtree(SDZ)\n",
+        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "    if not os.path.exists(SDZ):\n",
+        "      !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "    %cd stable-diffusion-webui\n",
+        "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user4.css -O user.css\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/multi_frame_render.py -O /scripts/multi_frame_render.py\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
+        "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/api.py -O modules/api/api.py\n",
+        "    \n",
+        "    clear_output()\n",
+        "  print('\u001b[1;96mInstalling SDZ ✓')\n",
+        "\n",
+        "if SDZ_Continue:\n",
+        "  with capture.capture_output() as cap:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    clear_output()\n",
+        "  print('\u001b[1;96mPreparing SDZ Continue ✓')\n",
+        "\n",
+        "# SDZ_Requirements\n",
+        "with capture.capture_output() as cap:\n",
+        "  os.chdir(SDZ_webui_path)\n",
+        "  import os\n",
+        "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "\n",
+        "  import os\n",
+        "  from google.colab.output import eval_js#\n",
+        "#  os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
+        "#  %env TF_CPP_MIN_LOG_LEVEL=1\n",
+        "#  !apt -y update -qq\n",
+        "#  !wget http://launchpadlibrarian.net/367274644/libgoogle-perftools-dev_2.5-2.2ubuntu3_amd64.deb\n",
+        "#  !wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/google-perftools_2.5-2.2ubuntu3_all.deb\n",
+        "#  !wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libtcmalloc-minimal4_2.5-2.2ubuntu3_amd64.deb\n",
+        "#  !wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libgoogle-perftools4_2.5-2.2ubuntu3_amd64.deb\n",
+        "#  !apt install -qq libunwind8-dev\n",
+        "#  !dpkg -i *.deb\n",
+        "#  %env LD_PRELOAD=libtcmalloc.so\n",
+        "#  !rm *.deb\n",
+        "\n",
+        "\n",
+        "  !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+        "  !pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
+        "  !pip install gradio\n",
+        "  #!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchtext==0.14.1 torchaudio==0.13.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu117\n",
+        "  #!pip install fastapi\n",
+        "  #!pip install triton\n",
+        "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
+        "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "\n",
+        "  #%cd models/Stable-diffusion\n",
+        "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
+        "    #!pip install xformers==0.0.16rc425\n",
+        "    #!pip install open-clip-torch\n",
+        "\n",
+        "# SDZ_Models\n",
+        "  os.chdir(SDZ_webui_path)\n",
+        "  %cd models/Stable-diffusion\n",
+        "  if SDZ_Download_Model == \"V1.5\":\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.B\":\n",
+        "    !wget --timestamping https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.inpaint\":\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
+        "\n",
+        "  else:\n",
+        "    SDZ_Download_Model == \"\"\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "\n",
+        "# SDZ_Extensions\n",
+        "  if SDZ_Extensions:\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
+        "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
+        "    #!git clone https://github.com/v8hid/infinite-zoom-automatic1111-webui.git\n",
+        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
+        "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
+        "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
+        "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
+        "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
+        "    #!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
+        "    #!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
+        "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
+        "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
+        "    #!git clone https://github.com/hnmr293/posex.git\n",
+        "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
+        "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
+        "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
+        "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
+        "    #!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
+        "    #!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
+        "    #!git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
+        "    #!git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
+        "    #!git clone https://github.com/Bing-su/sd-webui-tunnels.git\n",
+        "    #!git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui.git\n",
+        "    #!git clone https://github.com/bbc-mc/sdweb-xyplus.git\n",
+        "    #!git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git\n",
+        "    #!git clone https://github.com/arenatemp/stable-diffusion-webui-model-toolkit.git\n",
+        "    #!git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
+        "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
+        "    #!git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
+        "    #!git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
+        "    #!git clone https://github.com/hnmr293/sd-webui-llul.git\n",
+        "    #!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
+        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg\n",
+        "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
+        "    !git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
+        "    !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui  \n",
+        "    !wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
+        "    #!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
+        "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
+        "    %cd ..\n",
+        "\n",
+        "\n",
+        "# SDZ_Training\n",
+        "  if SDZ_Training == \"New_Dreambooth - Kohya\":\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "      !bash ./py310.sh -b -f -p /usr/local\n",
+        "      !python -m ipykernel install --name \"py310\" --user\n",
+        "      !pip install open-clip-torch\n",
+        "      !pip install triton\n",
+        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
+        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    %cd ..\n",
+        "    !pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
+        "\n",
+        "  elif SDZ_Training == \"Old_Dreambooth\":\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "      !bash ./py310.sh -b -f -p /usr/local\n",
+        "      !python -m ipykernel install --name \"py310\" --user\n",
+        "      !pip install open-clip-torch\n",
+        "      !pip install triton\n",
+        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "    \n",
+        "    os.chdir(SDZ_install)\n",
+        "    %cd stable-diffusion-webui\n",
+        "    !git checkout 1130d5df669911a5c67696be90bccca3ecf5f487\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user_old.css -O user.css\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "    %cd sd_dreambooth_extension\n",
+        "    !git checkout f9900ccb3ce7025d1c89334e320a1c3b255bbd07\n",
+        "    %cd ../..\n",
+        "\n",
+        "  else:\n",
+        "    SDZ_Training == \"\"\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "\n",
+        "  if SDZ_Big_Models:\n",
+        "    !sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' $SDZ_webui_path'/modules/shared.py'\n",
+        "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" $SDZ_webui_path'/modules/sd_models.py'\n",
+        "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
+        "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    #!sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
+        "    #!sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
+        "    #!sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;90m')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
+        "\n",
+        "    clear_output()\n",
+        "print('\u001b[1;90mPreparing SDZ System ✓')\n",
+        "if SDZ_Version == \"V1.5\":\n",
+        "    !python launch.py $share\n",
+        "\n",
+        "elif SDZ_Version == \"V2.1\":\n",
+        "    !python launch.py $share SDZconfigV2\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "U8fKk0gfjsTZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Download"
