--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -1814,7 +1814,7 @@
         "#SDZ_Models_Dir = \"\" \n",
         "#SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Extensions = False \n",
-        "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
+        "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
@@ -2049,10 +2049,74 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "imaxgFhZinR3"
+        "id": "imaxgFhZinR3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e0d81e6-2c03-4bb6-e0e6-766b532556f8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1;96mInstalling SDZ ✓\n",
+            "\u001b[1;90mPreparing SDZ System ✓\n",
+            "Enabling highvram mode because your GPU has more vram than your computer has ram. If you don't want this use: --normalvram\n",
+            "WARNING[XFORMERS]: xFormers can't load C++/CUDA extensions. xFormers was built for:\n",
+            "    PyTorch 2.0.0+cu118 with CUDA 1108 (you have 1.13.1+cu117)\n",
+            "    Python  3.10.11 (you have 3.10.11)\n",
+            "  Please reinstall xformers (see https://github.com/facebookresearch/xformers#installing-xformers)\n",
+            "  Memory-efficient attention, SwiGLU, sparse and more won't be available.\n",
+            "  Set XFORMERS_MORE_DETAILS=1 for more details\n",
+            "xformers version: 0.0.19\n",
+            "Set vram state to: HIGH_VRAM\n",
+            "Using xformers cross attention\n",
+            "/usr/local/lib/python3.10/dist-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/usr/local/lib/python3.10/dist-packages/torchvision/image.so: undefined symbol: _ZN3c104cuda20CUDACachingAllocator9allocatorE'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
+            "  warn(\n",
+            "\n",
+            "ComfyUI finished loading, trying to launch localtunnel (if it gets stuck here localtunnel is having issues)\n",
+            "your url is: https://wet-experts-hope.loca.lt\n",
+            "Error in sys.excepthook:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/rich/console.py\", line 1699, in print\n",
+            "    extend(render(renderable, render_options))\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/rich/console.py\", line 1331, in render\n",
+            "    for render_output in iter_render:\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/rich/traceback.py\", line 520, in __rich_console__\n",
+            "    self._render_stack(stack),\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/rich/console.py\", line 510, in _replace\n",
+            "    return Group(*renderables, fit=fit)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/rich/traceback.py\", line 682, in _render_stack\n",
+            "    code = read_code(frame.filename)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/rich/traceback.py\", line 618, in read_code\n",
+            "    return \"\".join(linecache.getlines(filename))\n",
+            "  File \"/usr/lib/python3.10/linecache.py\", line 46, in getlines\n",
+            "    return updatecache(filename, module_globals)\n",
+            "  File \"/usr/lib/python3.10/linecache.py\", line 137, in updatecache\n",
+            "    lines = fp.readlines()\n",
+            "  File \"/usr/lib/python3.10/codecs.py\", line 319, in decode\n",
+            "    def decode(self, input, final=False):\n",
+            "KeyboardInterrupt\n",
+            "\n",
+            "Original exception was:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/ComfyUI/main.py\", line 122, in <module>\n",
+            "    loop.run_until_complete(run(server, address=address, port=port, verbose=not dont_print, call_on_start=call_on_start))\n",
+            "  File \"/usr/lib/python3.10/asyncio/base_events.py\", line 636, in run_until_complete\n",
+            "    self.run_forever()\n",
+            "  File \"/usr/lib/python3.10/asyncio/base_events.py\", line 603, in run_forever\n",
+            "    self._run_once()\n",
+            "  File \"/usr/lib/python3.10/asyncio/base_events.py\", line 1871, in _run_once\n",
+            "    event_list = self._selector.select(timeout)\n",
+            "  File \"/usr/lib/python3.10/selectors.py\", line 469, in select\n",
+            "    fd_event_list = self._selector.poll(timeout, max_ev)\n",
+            "KeyboardInterrupt\n",
+            "^C\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
